objects/ssot__DisclosureReportingPeriod__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AffiliateAccountId__c</fullName>
        <label>Affiliate Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Disclosure Reporting Period Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747382308225_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DisclosureReportingPeriod_AffiliateA_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>DisclosureReportingPeriod_AffiliateA_rel</relationshipLabel>
        <relationshipName>rel_1747382308225_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>